--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 HK_FLOW_FILE="/home/connor/Dropbox/Research/Writing/HK_Flows_Scalar/pics/"
+SEMINAR_FILE="/home/connor/Dropbox/Research/Writing/SeminarTues/pics/"
